# Canny-Edge-Detector

./: .gitignore  CMakeLists.txt  README.md  canny_edge_detection.cpp  canny_edge_detection.h  gaussian_filter.cpp  gaussian_filter.h  hands_methods.h  main.cpp  sobel_operator.cpp  sobel_operator.h
